changes for implementation of get estimates
